# latexbot-rs

./: .envrc  Cargo.toml  flake.nix
.git-crypt/keys/default/0/: 0DE67CD3E50B1DF8845707C663308E3C3365BAA6.gpg
src/: main.rs
