[package]
name = "latexbot-rs"
version = "0.1.0"
authors = ["Sebastian Zivota <sebastian.zivota@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["std"] }
log = "0.4.11"
pretty_env_logger = "0.4.0"
teloxide = "0.3.1"
teloxide-macros = "0.3.2"
tokio = { version =  "0.2.11", features = ["rt-threaded", "macros"] }
